# src/routes/ivr.routes.js
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import * as ivrController from '../controllers/ivr.controller.js';
 import validate from '../middlewares/validate.js';
-import { validateAssignNumber, validateDeassignNumber } from '../validators/ivr.validators.js';
+import { validateAssignNumber, validateDeassignNumber, validateGetAssignedNumbers } from '../validators/ivr.validators.js';
 
 const router = Router();
 
@@ -17,6 +17,8 @@ router.put('/:id', ivrController.updateIVR);
 router.delete('/:id', ivrController.deleteIVR);
 
 router.post('/assign-number', validateAssignNumber, validate, ivrController.assignNumberToIVR);
+
+router.get('/assigned-numbers/:userId', validateGetAssignedNumbers, validate, ivrController.getAssignedNumbersWithIVR);
 
 router.post('/deassign-number', validateDeassignNumber, validate, ivrController.deassignNumberFromIVR);
 
